アカウント名の表記方法を変更

--- a/archive/001.md
+++ b/archive/001.md
@@ -8,7 +8,7 @@ category: archive
 2012/07/10 23:00-
 
 ### vimrc
-@alwei さんの vimrc を読みました。
+alwei さんの vimrc を読みました。
 
 - [.vimrc](https://github.com/alwei/dotfiles/blob/3760650625663f3b08f24bc75762ec843ca7e112/.vimrc) ([ダウンロード](https://raw.github.com/alwei/dotfiles/3760650625663f3b08f24bc75762ec843ca7e112/.vimrc))
 
