--- a/archive/002.md
+++ b/archive/002.md
@@ -8,7 +8,7 @@ category: archive
 2012/07/14(土) 23:00-
 
 ### vimrc
-@anekos さんの vimrc を読みました。
+anekos さんの vimrc を読みました。
 
 - [.vimrc](https://github.com/anekos/my-config/blob/0afcd78455743a4d3fad31674136428052dc6ebe/.vimrc) ([ダウンロード](https://raw.github.com/anekos/my-config/0afcd78455743a4d3fad31674136428052dc6ebe/.vimrc))
 
