--- a/archive/004.md
+++ b/archive/004.md
@@ -8,7 +8,7 @@ category: archive
 2012/07/28(土) 23:00-
 
 ### vimrc
-@basyura さんの vimrc を読みました。
+basyura さんの vimrc を読みました。
 
 - [vimrc](https://github.com/basyura/vimfiles/blob/ee086f25b8c58b8ea6bf025d26ebc11ae50e6ca1/rc/vimrc) ([ダウンロード](https://raw.github.com/basyura/vimfiles/ee086f25b8c58b8ea6bf025d26ebc11ae50e6ca1/rc/vimrc))
 
