--- a/archive/005.md
+++ b/archive/005.md
@@ -8,7 +8,7 @@ category: archive
 2012/08/04(土) 23:00-
 
 ### vimrc
-@osyo-manga さんの vimrc を読みました。
+osyo-manga さんの vimrc を読みました。
 
 - [vimrc](https://github.com/osyo-manga/vimrc/blob/9ef0ca9757abcdaa11c76024aa551f0b473624bf/vimrcs/default/vimrc) ([ダウンロード](https://raw.github.com/osyo-manga/vimrc/9ef0ca9757abcdaa11c76024aa551f0b473624bf/vimrcs/default/vimrc))
 
