--- a/archive/003.md
+++ b/archive/003.md
@@ -8,7 +8,7 @@ category: archive
 2012/07/21(土) 24:00-
 
 ### vimrc
-@sigwyg さんの vimrc を読みました。
+sigwyg さんの vimrc を読みました。
 
 - [.vimrc](https://github.com/sigwyg/dotfiles/blob/8c70c4032ebad90a8d92b76b1c5d732f28559e40/.vimrc) ([ダウンロード](https://raw.github.com/sigwyg/dotfiles/8c70c4032ebad90a8d92b76b1c5d732f28559e40/.vimrc))
 
