--- a/archive/007.md
+++ b/archive/007.md
@@ -39,3 +39,6 @@ category: archive
 
 ### ログ
 <http://lingr.com/room/vim/archives/2012/08/18#message-11492279>
+
+### 関連リンク
+- <http://d.hatena.ne.jp/osyo-manga/20120812/1344702200>
