--- a/archive/010.md
+++ b/archive/010.md
@@ -11,6 +11,7 @@ category: archive
 [thinca](https://github.com/thinca) さんの vimrc を読みました（前半戦）。
 
 - [vimrc](https://gist.github.com/3666285) ([ダウンロード](https://raw.github.com/gist/3666285/84069c169c6c683ed89212ed048323c5c116bef1/vimrc))
+- [bundle.vim](https://gist.github.com/3675965) ([ダウンロード](https://raw.github.com/gist/3675965/5739da5abedef838ed49b8328d9b29e3dd78bed4/bundle.vim))
 
 ### 参加者リスト
 
