第12回に関連リンク追加

--- a/archive/012.md
+++ b/archive/012.md
@@ -32,3 +32,5 @@ category: archive
 ### ログ
 <http://lingr.com/room/vim/archives/2012/09/22#message-12081555>
 
+### 関連リンク
+- <http://d.hatena.ne.jp/leafcage/20120923/1348403652>
