第11回に関連リンクを追加

--- a/archive/011.md
+++ b/archive/011.md
@@ -34,3 +34,5 @@ category: archive
 ### ログ
 <http://lingr.com/room/vim/archives/2012/09/15#message-11945510>
 
+### 関連リンク
+- <http://d.hatena.ne.jp/leafcage/20120916/1347733917>
