archive.13: fix link & 参加者リスト

--- a/archive/013.md
+++ b/archive/013.md
@@ -8,7 +8,7 @@ category: archive
 2012/09/29(土) 23:00-
 
 ### vimrc
-[sorah](https://github.com/sorah/config/blob/f8f7d565668f35e8e4a70858a649caa6b1307b15/vim/dot.vimrc) さんの vimrc を読みました。
+[sorah](https://github.com/sorah/) さんの vimrc を読みました。
 
 - [vimrc](https://github.com/sorah/config/blob/f8f7d565668f35e8e4a70858a649caa6b1307b15/vim/dot.vimrc) ([ダウンロード](https://raw.github.com/sorah/config/master/vim/dot.vimrc))
 
@@ -16,12 +16,6 @@ category: archive
 
 17名。
 
-参加者リスト
-
-- LeafCage
-- Lindan
-- Shinya Saiho
-- Shota Fukumori
 - bgnori
 - d6rkaiz
 - daisuzu
@@ -29,13 +23,16 @@ category: archive
 - grauwoelfchen
 - hecomi
 - manga_osyo
+- LeafCage
+- Lindan
 - raa0121
 - rbtnn
+- Shinya Saiho
+- Shota Fukumori
 - shim0mura
 - thinca
 - umeyee
 - wiredool
-
 
 
 ### ログ
