--- a/archive/034.md
+++ b/archive/034.md
@@ -10,7 +10,7 @@ category: archive
 ### vimrc
 [hibiki](https://github.com/hibiki) さんの gvimrc を読みました。
 
-- [gvimrc](https://github.com/hibiki/dotfiles/blob/1569874d97c98a5ccfc502b1a2e85818845be1e8/.gvimrc) ([ダウンロード](https://raw.github.com/hibiki/dotfiles/1569874d97c98a5ccfc502b1a2e85818845be1e8/.gvimrc)
+- [gvimrc](https://github.com/hibiki/dotfiles/blob/1569874d97c98a5ccfc502b1a2e85818845be1e8/.gvimrc) ([ダウンロード](https://raw.github.com/hibiki/dotfiles/1569874d97c98a5ccfc502b1a2e85818845be1e8/.gvimrc))
 
 ### 参加者リスト
 
