参加者の表記を修正

--- a/archive/041.md
+++ b/archive/041.md
@@ -16,20 +16,20 @@ category: archive
 
 14名。
 
-cohama
-wiredool
-alpaca_taichou
-mopp
-rbtnn
-supermomonga
-tyru
-mattn
-deris0126
-msmhrt
-ujihisa
-manga_osyo
-raiden325
-thinca
+- cohama
+- wiredool
+- alpaca_taichou
+- mopp
+- rbtnn
+- supermomonga
+- tyru
+- mattn
+- deris0126
+- msmhrt
+- ujihisa
+- manga_osyo
+- raiden325
+- thinca
 
 
 ### ログ
