fixed 010.md and 011.md

--- a/archive/011.md
+++ b/archive/011.md
@@ -8,7 +8,7 @@ category: archive
 2012/09/15(土) 23:00-
 
 ### vimrc
-[thinca](https://github.com/thinca) さんの vimrc を読みました（後半戦）。
+[thinca](https://github.com/thinca) さんの vimrc を読みました。
 
 - [vimrc](https://gist.github.com/3666285) ([ダウンロード](https://raw.github.com/gist/3666285/84069c169c6c683ed89212ed048323c5c116bef1/vimrc))
 - [bundle.vim](https://gist.github.com/3675965) ([ダウンロード](https://raw.github.com/gist/3675965/5739da5abedef838ed49b8328d9b29e3dd78bed4/bundle.vim))
