Improve XXX.md & fix _data/archives.yml
Use page.id

--- a/archive/087.md
+++ b/archive/087.md
@@ -1,11 +1,12 @@
 ---
 layout: archive
 title: 第87回 vimrc読書会
+id: 87
 category: archive
 ---
 
 {% for i in site.data.archives %}
-  {% if i.id == 87 %}
+  {% if i.id == page.id %}
     {% assign archive = i %}
   {% endif %}
 {% endfor %}
