--- a/archive/086.md
+++ b/archive/086.md
@@ -1,11 +1,12 @@
 ---
 layout: archive
 title: 第86回 vimrc読書会
+id: 86
 category: archive
 ---
 
 {% for i in site.data.archives %}
-  {% if i.id == 86 %}
+  {% if i.id == page.id %}
     {% assign archive = i %}
   {% endif %}
 {% endfor %}
