Include template on each archive pages

--- a/archive/001.md
+++ b/archive/001.md
@@ -1,34 +1,7 @@
 ---
 layout: archive
 title: 第1回 vimrc読書会
+id: 1
 category: archive
 ---
-
-### 日時
-2012/07/10 23:00-
-
-### vimrc
-alwei さんの vimrc を読みました。
-
-- [.vimrc](https://github.com/alwei/dotfiles/blob/3760650625663f3b08f24bc75762ec843ca7e112/.vimrc) ([ダウンロード](https://raw.github.com/alwei/dotfiles/3760650625663f3b08f24bc75762ec843ca7e112/.vimrc))
-
-### 参加者リスト
-11名。
-
-- LeafCage
-- Lindan
-- anekos
-- bgnori
-- d6rkaiz
-- daisuzu
-- ka
-- manga\_osyo
-- rbtnn
-- thinca
-- ujihisa
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/07/10#message-10607857>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/thinca/20120713/1342116499>
+{% include archive.md %}
