--- a/archive/002.md
+++ b/archive/002.md
@@ -1,53 +1,7 @@
 ---
 layout: archive
 title: 第2回 vimrc読書会
+id: 2
 category: archive
 ---
-
-### 日時
-2012/07/14(土) 23:00-
-
-### vimrc
-anekos さんの vimrc を読みました。
-
-- [.vimrc](https://github.com/anekos/my-config/blob/0afcd78455743a4d3fad31674136428052dc6ebe/.vimrc) ([ダウンロード](https://raw.github.com/anekos/my-config/0afcd78455743a4d3fad31674136428052dc6ebe/.vimrc))
-
-### 参加者リスト
-27名。
-
-- Jagua
-- KMNK
-- Lindan
-- NPoi
-- Shaula
-- Shougo
-- anekos
-- basyura
-- bgnori
-- bouzuya
-- daisuzu
-- deris0126
-- guyon
-- hamaco
-- heavenshell
-- kozo2
-- manga\_osyo
-- phyllite
-- raiden325
-- rbtnn
-- shim0mura
-- shiracha
-- symmet
-- thinca
-- wiredool
-- yomi322
-- yyatsuo
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/07/14#message-10685723>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/thinca/20120715/1342292425>
-- <http://d.hatena.ne.jp/osyo-manga/20120716/1342444817>
-- <http://d.hatena.ne.jp/kanno_kanno/20120714/1342286212>
+{% include archive.md %}
