--- a/archive/004.md
+++ b/archive/004.md
@@ -1,41 +1,7 @@
 ---
 layout: archive
 title: 第4回 vimrc読書会
+id: 4
 category: archive
 ---
-
-### 日時
-2012/07/28(土) 23:00-
-
-### vimrc
-basyura さんの vimrc を読みました。
-
-- [vimrc](https://github.com/basyura/vimfiles/blob/ee086f25b8c58b8ea6bf025d26ebc11ae50e6ca1/rc/vimrc) ([ダウンロード](https://raw.github.com/basyura/vimfiles/ee086f25b8c58b8ea6bf025d26ebc11ae50e6ca1/rc/vimrc))
-
-### 参加者リスト
-16名。
-
-- Jagua
-- Lindan
-- Shaula
-- Shougo
-- anekos
-- basyura
-- bouzuya
-- daisuzu
-- kanno\_kanno
-- manga\_osyo
-- rbtnn
-- shiracha
-- thinca
-- umeyee
-- wiredool
-- 白帽子
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/07/28#message-11029511>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/thinca/20120729/1343570370>
-- <http://d.hatena.ne.jp/osyo-manga/20120729/1343493297>
-- <http://d.hatena.ne.jp/kanno_kanno/20120728/1343495908>
+{% include archive.md %}
