--- a/archive/006.md
+++ b/archive/006.md
@@ -1,36 +1,7 @@
 ---
 layout: archive
 title: 第6回 vimrc読書会
+id: 6
 category: archive
 ---
-
-### 日時
-2012/08/11(土) 23:00-
-
-### vimrc
-[rhysd](https://github.com/rhysd) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/rhysd/dotfiles/blob/8228ebaeab0e022ee7161d0eb9fc633876b0be41/vimrc) ([ダウンロード](https://raw.github.com/rhysd/dotfiles/8228ebaeab0e022ee7161d0eb9fc633876b0be41/vimrc))
-
-### 参加者リスト
-
-11名。
-
-- Jagua
-- Lindan
-- Shougo
-- wiredool
-- deris0126
-- rbtnn
-- ryutorion
-- mattn
-- manga_osyo
-- thinca
-- shiracha
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/08/11#message-11349514>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/osyo-manga/20120812/1344702200>
+{% include archive.md %}
