--- a/archive/007.md
+++ b/archive/007.md
@@ -1,45 +1,7 @@
 ---
 layout: archive
 title: 第7回 vimrc読書会
+id: 7
 category: archive
 ---
-
-### 日時
-2012/08/18(土) 23:00-
-
-### vimrc
-[ebc-2in2crc](https://github.com/ebc-2in2crc) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/ebc-2in2crc/vimrc/blob/f1ed88bf0d3668ebf8d702def40625d435f545cd/_vimrc) ([ダウンロード](https://raw.github.com/ebc-2in2crc/vimrc/f1ed88bf0d3668ebf8d702def40625d435f545cd/_vimrc))
-
-### 参加者リスト
-
-19名。
-
-- AmaiSaeta
-- Asaka
-- Lindan
-- Shougo
-- anekos
-- basyura
-- cointoss1973
-- daisuzu
-- deris0126
-- ebc_2in2crc
-- manga_osyo
-- raiden325
-- rbtnn
-- sgur
-- tek_koc
-- thinca
-- wiredool
-- y_sumida
-- yomi322
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/08/18#message-11492279>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/osyo-manga/20120819/1345340766>
-- <http://d.hatena.ne.jp/ebc_2in2crc/20120819/1345380039>
+{% include archive.md %}
