--- a/archive/011.md
+++ b/archive/011.md
@@ -1,38 +1,7 @@
 ---
 layout: archive
 title: 第11回 vimrc読書会
+id: 11
 category: archive
 ---
-
-### 日時
-2012/09/15(土) 23:00-
-
-### vimrc
-[thinca](https://github.com/thinca) さんの vimrc を読みました。
-
-- [vimrc](https://gist.github.com/3666285) ([ダウンロード](https://raw.github.com/gist/3666285/84069c169c6c683ed89212ed048323c5c116bef1/vimrc))
-- [bundle.vim](https://gist.github.com/3675965) ([ダウンロード](https://raw.github.com/gist/3675965/5739da5abedef838ed49b8328d9b29e3dd78bed4/bundle.vim))
-
-### 参加者リスト
-
-13名。
-
-- AmaiSaeta
-- Lindan
-- bgnori
-- deris0126
-- ebc_2in2crc
-- grauwoelfchen
-- manga_osyo
-- rbtnn
-- thinca
-- ujihisa
-- umeyee
-- wiredool
-- y_sumida
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/09/15#message-11945510>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/leafcage/20120916/1347733917>
+{% include archive.md %}
