--- a/archive/012.md
+++ b/archive/012.md
@@ -1,36 +1,7 @@
 ---
 layout: archive
 title: 第12回 vimrc読書会
+id: 12
 category: archive
 ---
-
-### 日時
-2012/09/22(土) 23:00-
-
-### vimrc
-[LeafCage](https://github.com/LeafCage) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/LeafCage/dotfiles/blob/fa632dee5afaadf7e61ad2cc180f765f2e3a3c01/.vimrc) ([ダウンロード](https://raw.github.com/LeafCage/dotfiles/fa632dee5afaadf7e61ad2cc180f765f2e3a3c01/.vimrc))
-
-### 参加者リスト
-
-12名。
-
-- Jagua
-- LeafCage
-- Lindan
-- bgnori
-- d6rkaiz
-- deris0126
-- manga_osyo
-- mattn
-- rbtnn
-- thinca
-- ujihisa
-- wiredool
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/09/22#message-12081555>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/leafcage/20120923/1348403652>
+{% include archive.md %}
