--- a/archive/016.md
+++ b/archive/016.md
@@ -1,40 +1,7 @@
 ---
 layout: archive
 title: 第16回 vimrc読書会
+id: 16
 category: archive
 ---
-
-### 日時
-2012/10/20(土) 23:00-
-
-### vimrc
-[shim0mura](https://github.com/shim0mura) さんの vimrc を読みました。
-
-- [.vimrc](https://github.com/shim0mura/dotfiles/blob/0a1e64b7614b9b95a861de9451043d05c189fb24/.vimrc) ([ダウンロード](https://raw.github.com/shim0mura/dotfiles/0a1e64b7614b9b95a861de9451043d05c189fb24/.vimrc))
-
-
-### 参加者リスト
-
-14名。
-
-- AmaiSaeta
-- Jagua
-- Shaula
-- bgnori
-- daisuzu
-- deris0126
-- manga_osyo
-- raa0121
-- rbtnn
-- saki7
-- shim0mura
-- tek_koc
-- thinca
-- wiredool
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/10/20#message-12556118>
-
-### 関連リンク
-
+{% include archive.md %}
