--- a/archive/018.md
+++ b/archive/018.md
@@ -1,43 +1,7 @@
 ---
 layout: archive
 title: 第18回 vimrc読書会
+id: 18
 category: archive
 ---
-
-### 日時
-2012/11/03(土) 23:00-
-
-### vimrc
-[cpfaff](https://github.com/cpfaff) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/cpfaff/vim-my-setup/blob/4fc6b9134ea4b5ac54b248887c9076bf44e66d92/vimrc) ([ダウンロード](https://raw.github.com/cpfaff/vim-my-setup/4fc6b9134ea4b5ac54b248887c9076bf44e66d92/vimrc))
-
-
-### 参加者リスト
-
-17名。
-
-- Jagua
-- L271
-- Vim
-- bgnori
-- daisuzu
-- deris0126
-- manga_osyo
-- mattn
-- raiden325
-- rbtnn
-- sachi_volta
-- string
-- thinca
-- tyru
-- ujihisa
-- wiredool
-- yuya_presto
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/11/03#message-12785348>
-
-### 関連リンク
-
+{% include archive.md %}
