--- a/archive/019.md
+++ b/archive/019.md
@@ -1,36 +1,7 @@
 ---
 layout: archive
 title: 第19回 vimrc読書会
+id: 19
 category: archive
 ---
-
-### 日時
-2012/11/10(土) 23:00-
-
-### vimrc
-[kazuph](https://github.com/kazuph) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/kazuph/dotfiles/blob/3a6454943c8142a67a58be27eb9885a7a48f9871/_vimrc) ([ダウンロード](https://raw.github.com/kazuph/dotfiles/3a6454943c8142a67a58be27eb9885a7a48f9871/_vimrc))
-
-
-### 参加者リスト
-
-11名。
-
-- Jagua
-- LeafCage
-- Shougo
-- deris0126
-- kazuph
-- rbtnn
-- saki7
-- thinca
-- ujihisa
-- wiredool
-- yuya_presto
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/11/10#message-12888729>
-
-### 関連リンク
-
+{% include archive.md %}
