--- a/archive/021.md
+++ b/archive/021.md
@@ -1,43 +1,7 @@
 ---
 layout: archive
 title: 第21回 vimrc読書会
+id: 21
 category: archive
 ---
-
-### 日時
-2012/11/24(土) 23:00-
-
-### vimrc
-[tsukkee](https://github.com/tsukkee) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/tsukkee/config/blob/02c58fccf330abcbbbe8c25072487f315971bc27/vimrc) ([ダウンロード](https://raw.github.com/tsukkee/config/02c58fccf330abcbbbe8c25072487f315971bc27/vimrc))
-
-
-### 参加者リスト
-
-17名。
-
-- AmaiSaeta
-- Jagua
-- LeafCage
-- Lindan
-- bgnori
-- daisuzu
-- deris0126
-- manga_osyo
-- raa0121
-- raiden325
-- rbtnn
-- tek_koc
-- thinca
-- tsukkee
-- ujihisa
-- wiredool
-- yuya_presto
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/11/24#message-13012131>
-
-### 関連リンク
-
+{% include archive.md %}
