--- a/archive/027.md
+++ b/archive/027.md
@@ -1,33 +1,7 @@
 ---
 layout: archive
 title: 第27回 vimrc読書会
+id: 27
 category: archive
 ---
-
-### 日時
-2013/01/05(土) 23:00-
-
-### vimrc
-[hecomi](https://github.com/hecomi) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/hecomi/dotfiles/blob/cb97269c96cc311b1f74771ea6b0ca7193d6e89b/.vimrc) ([ダウンロード](https://raw.github.com/hecomi/dotfiles/cb97269c96cc311b1f74771ea6b0ca7193d6e89b/.vimrc))
-
-### 参加者リスト
-
-9名。
-
-- Jagua
-- bool_fool
-- chikatoike
-- hecomi
-- hrsh7th
-- itchyny
-- raiden325
-- thinca
-- wiredool
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/01/05#message-13453756>
-
-### 関連リンク
-
+{% include archive.md %}
