--- a/archive/028.md
+++ b/archive/028.md
@@ -1,39 +1,7 @@
 ---
 layout: archive
 title: 第28回 vimrc読書会
+id: 28
 category: archive
 ---
-
-### 日時
-2013/01/12(土) 23:00-
-
-### vimrc
-[itchyny](https://github.com/itchyny) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/itchyny/dotfiles/blob/eba53c32ce05d410a46b00119f7a25341bd6cb37/.vimrc) ([ダウンロード](https://raw.github.com/itchyny/dotfiles/eba53c32ce05d410a46b00119f7a25341bd6cb37/.vimrc))
-
-### 参加者リスト
-
-15名。
-
-- AmaiSaeta
-- Shougo
-- anekos
-- aoisensi
-- bool_fool
-- daisuzu
-- deris0126
-- grauwoelfchen
-- hecomi
-- itchyny
-- jakalada
-- manga_osyo
-- raa0121
-- rbtnn
-- thinca
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/01/12#message-13522483>
-
-### 関連リンク
-
+{% include archive.md %}
