--- a/archive/029.md
+++ b/archive/029.md
@@ -1,42 +1,7 @@
 ---
 layout: archive
 title: 第29回 vimrc読書会
+id: 29
 category: archive
 ---
-
-### 日時
-2013/01/19(土) 23:00-
-
-### vimrc
-[cohama](https://github.com/cohama) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/cohama/.vim/blob/284b2c2a4af9372aea257fd2465cc1eb8d52e584/.vimrc) ([ダウンロード](https://raw.github.com/cohama/.vim/284b2c2a4af9372aea257fd2465cc1eb8d52e584/.vimrc))
-
-### 参加者リスト
-
-18名。
-
-- Jagua
-- KoRoN
-- LeafCage
-- Mi_Sawa
-- Shougo
-- aoisensi
-- bool_fool
-- chikatoike
-- cohama
-- endings
-- jakalada
-- manga_osyo
-- mattn
-- raiden325
-- rbtnn
-- thinca
-- tyru
-- yuya_presto
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/01/19#message-13587673>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/leafcage/20130120/1358608137>
+{% include archive.md %}
