--- a/archive/030.md
+++ b/archive/030.md
@@ -1,45 +1,7 @@
 ---
 layout: archive
 title: 第30回 vimrc読書会
+id: 30
 category: archive
 ---
-
-### 日時
-2013/01/26(土) 23:00-
-
-### vimrc
-[Shougo](https://github.com/Shougo) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/Shougo/shougo-s-github/blob/f5dfd7961ef9ecf6e7c3811c666d7a53a283ecfd/vim/.vimrc) ([ダウンロード](https://raw.github.com/Shougo/shougo-s-github/f5dfd7961ef9ecf6e7c3811c666d7a53a283ecfd/vim/.vimrc))
-
-### 参加者リスト
-
-20名。
-
-- Jagua
-- cohama
-- Lindan
-- Shougo
-- wiredool
-- deris0126
-- bool_fool
-- rbtnn
-- BOXP
-- daisuzu
-- syngan
-- aoisensi
-- sonots
-- Shaula
-- manga_osyo
-- yuya_presto
-- raiden325
-- LeafCage
-- Shimesaba
-- thinca
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/01/26#message-13704754>
-
-### 関連リンク
-
+{% include archive.md %}
