--- a/archive/033.md
+++ b/archive/033.md
@@ -1,38 +1,7 @@
 ---
 layout: archive
 title: 第33回 vimrc読書会
+id: 33
 category: archive
 ---
-
-### 日時
-2013/02/16(土) 23:00-
-
-### vimrc
-[tpope](https://github.com/tpope) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/tpope/tpope/blob/4cc1f16c85414e91c1ea6e05ea516a88c00b4d08/.vimrc) ([ダウンロード](https://raw.github.com/tpope/tpope/4cc1f16c85414e91c1ea6e05ea516a88c00b4d08/.vimrc))
-
-### 参加者リスト
-
-13名。
-
-- Jagua
-- Shougo
-- bgnori
-- cohama
-- daisuzu
-- guyon
-- manga_osyo
-- mattn
-- rbtnn
-- syngan
-- thinca
-- tonimaru
-- wiredool
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/02/16#message-14048433>
-
-### 関連リンク
-
+{% include archive.md %}
