--- a/archive/036.md
+++ b/archive/036.md
@@ -1,40 +1,7 @@
 ---
 layout: archive
 title: 第36回 vimrc読書会
+id: 36
 category: archive
 ---
-
-### 日時
-2013/03/09(土) 23:00-
-
-### vimrc
-[jakalada](https://github.com/jakalada) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/jakalada/vim-dotfiles/blob/fd30969c1b52175a112add9fd8308bc502df907f/_vimrc) ([ダウンロード](https://raw.github.com/jakalada/vim-dotfiles/fd30969c1b52175a112add9fd8308bc502df907f/_vimrc))
-
-### 参加者リスト
-
-15名。
-
-- Jagua
-- Lindan
-- aoisensi
-- clojure
-- cohama
-- deris0126
-- jakalada
-- mattn
-- mopp
-- rbtnn
-- supermomonga
-- thinca
-- tonimaru
-- ujihisa
-- wiredool
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/03/09#message-14242610>
-
-### 関連リンク
-
+{% include archive.md %}
