--- a/archive/047.md
+++ b/archive/047.md
@@ -1,43 +1,7 @@
 ---
 layout: archive
 title: 第47回 vimrc読書会
+id: 47
 category: archive
 ---
-
-### 日時
-2013/05/25(土) 23:00-
-
-### vimrc
-[kana](https://github.com/kana) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/kana/config/blob/cc6216eddbf9abc68526d90335f2d42cd43978ed/vim/personal/dot.vimrc) ([ダウンロード](https://raw.github.com/kana/config/cc6216eddbf9abc68526d90335f2d42cd43978ed/vim/personal/dot.vimrc))
-
-### 参加者リスト
-
-18名。
-
-- AmaiSaeta
-- DeaR
-- Jagua
-- Lindan
-- TAKAyukiatkwsk
-- basyura
-- boolfool
-- cohama
-- deris0126
-- manga_osyo
-- mattn
-- raa0121
-- rbtnn
-- s_of_p
-- supermomonga
-- thinca
-- tombo
-- ujihisa
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/05/25#message-15400040>
-
-### 関連リンク
-
+{% include archive.md %}
