--- a/archive/048.md
+++ b/archive/048.md
@@ -1,39 +1,7 @@
 ---
 layout: archive
 title: 第48回 vimrc読書会
+id: 48
 category: archive
 ---
-
-### 日時
-2013/06/01(土) 23:00-
-
-### vimrc
-[kana](https://github.com/kana) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/kana/config/blob/cc6216eddbf9abc68526d90335f2d42cd43978ed/vim/personal/dot.vimrc) ([ダウンロード](https://raw.github.com/kana/config/cc6216eddbf9abc68526d90335f2d42cd43978ed/vim/personal/dot.vimrc))
-
-### 参加者リスト
-
-14名。
-
-- AmaiSaeta
-- ArcCosine
-- Jagua
-- Lindan
-- basyura
-- cohama
-- deris0126
-- hecomi
-- manga_osyo
-- raa0121
-- rbtnn
-- s_of_p
-- thinca
-- ujihisa
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/06/01#message-15465616>
-
-### 関連リンク
-
+{% include archive.md %}
