--- a/archive/049.md
+++ b/archive/049.md
@@ -1,39 +1,7 @@
 ---
 layout: archive
 title: 第49回 vimrc読書会
+id: 49
 category: archive
 ---
-
-### 日時
-2013/06/08(土) 23:00-
-
-### vimrc
-[kzy52](https://github.com/kzy52) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/kzy52/dotfiles/blob/39b442989fad1a86cee429c0b1781f49ec58da6c/.vimrc) ([ダウンロード](https://raw.github.com/kzy52/dotfiles/39b442989fad1a86cee429c0b1781f49ec58da6c/.vimrc))
-
-### 参加者リスト
-
-14名。
-
-- DeaR
-- Lindan
-- Shougo
-- cohama
-- deris0126
-- hecomi
-- jakalada
-- manga_osyo
-- rbtnn
-- s_of_p
-- supermomonga
-- syngan
-- thinca
-- ujihisa
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/06/08#message-15543134>
-
-### 関連リンク
-
+{% include archive.md %}
