--- a/archive/055.md
+++ b/archive/055.md
@@ -1,36 +1,7 @@
 ---
 layout: archive
 title: 第55回 vimrc読書会
+id: 55
 category: archive
 ---
-
-### 日時
-2013/07/20(土) 23:00-
-
-### vimrc
-[terryma](https://github.com/terryma) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/terryma/dotfiles/blob/0724f8ce9efaed7fd7d2b3524ff7282b684942a8/.vimrc) ([ダウンロード](https://raw.github.com/terryma/dotfiles/0724f8ce9efaed7fd7d2b3524ff7282b684942a8/.vimrc))
-
-### 参加者リスト
-
-12名。
-
-- DeaR
-- cohama
-- deris0126
-- kocha2012
-- mattn
-- rbtnn
-- s_of_p
-- sgur
-- syngan
-- thinca
-- unmoremaster
-- 明らかにももんが（どうみても）
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/07/20#message-15952109>
-
-### 関連リンク
-
+{% include archive.md %}
