--- a/archive/061.md
+++ b/archive/061.md
@@ -1,37 +1,7 @@
 ---
 layout: archive
 title: 第61回 vimrc読書会
+id: 61
 category: archive
 ---
-
-### 日時
-2013/08/31(土) 23:00-
-
-### vimrc
-[kmizu](https://github.com/kmizu) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/kmizu/dotfiles/blob/e3777116898e3f2d770588faaedc658e5f3f2da9/.vimrc) ([ダウンロード](https://raw.github.com/kmizu/dotfiles/e3777116898e3f2d770588faaedc658e5f3f2da9/.vimrc))
-
-### 参加者リスト
-
-14名。
-
-- Jagua
-- Lindan
-- anekos
-- boolfool
-- cohama
-- kamichidu
-- manga_osyo
-- mattn
-- raa0121
-- rbtnn
-- s_of_p
-- sgur
-- syngan
-- thinca
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/08/31/#message-16445892>
-
+{% include archive.md %}
