--- a/archive/062.md
+++ b/archive/062.md
@@ -1,38 +1,7 @@
 ---
 layout: archive
 title: 第62回 vimrc読書会
+id: 62
 category: archive
 ---
-
-### 日時
-2013/09/07(土) 23:00-
-
-### vimrc
-[joedicastro](https://github.com/joedicastro) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/joedicastro/dotfiles/blob/45185501ab4cac0fad4e1918d8c0f9aa2faa94e1/vim/vimrc) ([ダウンロード](https://raw.github.com/joedicastro/dotfiles/45185501ab4cac0fad4e1918d8c0f9aa2faa94e1/vim/vimrc))
-
-### 参加者リスト
-
-16名。
-
-- LeafCage
-- alpaca_taichou
-- anekos
-- cohama
-- deris0126
-- haya14busa
-- manga_osyo
-- mattn
-- raa0121
-- rbtnn
-- s_of_p
-- sgur
-- supermomonga
-- thinca
-- ujihisa
-- unmoremaster
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/09/07/#message-16547473>
-
+{% include archive.md %}
