--- a/archive/064.md
+++ b/archive/064.md
@@ -1,35 +1,7 @@
 ---
 layout: archive
 title: 第64回 vimrc読書会
+id: 64
 category: archive
 ---
-
-### 日時
-2013/09/21(土) 23:00-
-
-### vimrc
-[bootleq](https://github.com/bootleq) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/bootleq/vimrc_human/blob/c75c58f2d18d22667f1d59d46fe567d38b2f8062/.vimrc) ([ダウンロード](https://raw.github.com/bootleq/vimrc_human/c75c58f2d18d22667f1d59d46fe567d38b2f8062/.vimrc))
-
-### 参加者リスト
-
-13名。
-
-- anekos
-- cohama
-- crazymaster
-- deris0126
-- haya14busa
-- manga_osyo
-- mattn
-- rbtnn
-- s_of_p
-- sgur
-- supermomonga
-- thinca
-- yasu_n
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/09/21/#message-16763200>
-
+{% include archive.md %}
