--- a/archive/065.md
+++ b/archive/065.md
@@ -1,33 +1,7 @@
 ---
 layout: archive
 title: 第65回 vimrc読書会
+id: 65
 category: archive
 ---
-
-### 日時
-2013/09/28(土) 23:00-
-
-### vimrc
-[saihoooooooo](https://github.com/saihoooooooo) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/saihoooooooo/dotfiles/blob/32bfe49d6ae3e170c084c8c1646b55ea5d5fc0eb/.vimrc) ([ダウンロード](https://raw.github.com/saihoooooooo/dotfiles/32bfe49d6ae3e170c084c8c1646b55ea5d5fc0eb/.vimrc))
-
-### 参加者リスト
-
-11名。
-
-- Lindan
-- anekos
-- boolfool
-- cohama
-- deris0126
-- mattn
-- s_of_p
-- saihoooooooo
-- supermomonga
-- thinca
-- yasu_n
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/09/28/#message-16851940>
-
+{% include archive.md %}
