--- a/archive/069.md
+++ b/archive/069.md
@@ -1,34 +1,7 @@
 ---
 layout: archive
 title: 第69回 vimrc読書会
+id: 69
 category: archive
 ---
-
-### 日時
-2013/10/26(土) 23:00-
-
-### vimrc
-[alpaca-tc](https://github.com/alpaca-tc) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/alpaca-tc/dotfiles/blob/bd82f3673ebc76299305156ac4e8c3f9e9f23374/.vim/vimrc) ([ダウンロード](https://raw.github.com/alpaca-tc/dotfiles/bd82f3673ebc76299305156ac4e8c3f9e9f23374/.vim/vimrc))
-
-### 参加者リスト
-
-9名。
-
-- alpaca_taichou
-- cohama
-- deris0126
-- manga_osyo
-- mattn
-- supermomonga
-- thinca
-- yo_i_jewelry
-- yuya_presto
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/10/26/#message-17189944>
-
-### 関連リンク
-- <http://chopapp.com/#pwgstoq4>
-
+{% include archive.md %}
