--- a/archive/074.md
+++ b/archive/074.md
@@ -1,42 +1,7 @@
 ---
 layout: archive
 title: 第74回 vimrc読書会
+id: 74
 category: archive
 ---
-
-### 日時
-2013/11/30(土) 23:00-
-
-### vimrc
-[creasty](https://github.com/creasty) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/creasty/dotfiles/blob/bbd8b60af659133909096ba5197d4812f4589257/_vimrc) ([ダウンロード](https://raw.github.com/creasty/dotfiles/bbd8b60af659133909096ba5197d4812f4589257/_vimrc))
-
-### 参加者リスト
-
-16名。
-
-- DeaR
-- KoRoN
-- Lindan
-- Yuki Iwanaga
-- cohama
-- crazymaster
-- deris0126
-- haya14busa
-- lisia
-- manga_osyo
-- mattn
-- mopp
-- rbtnn
-- sgur
-- supermomonga
-- thinca
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/11/30/#message-17696493>
-
-### 関連リンク
-- <http://chopapp.com/#6vvv9f4p>
-
+{% include archive.md %}
