--- a/archive/079.md
+++ b/archive/079.md
@@ -1,30 +1,7 @@
 ---
 layout: archive
 title: 第79回 vimrc読書会
+id: 79
 category: archive
 ---
-
-### 日時
-2013/01/04(土) 23:00-
-
-### vimrc
-[eccyan](https://github.com/eccyan) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/eccyan/dotfiles/blob/df186a154a634d91ead180d04e48ce8da5359a40/.vimrc) ([ダウンロード](https://raw.github.com/eccyan/dotfiles/df186a154a634d91ead180d04e48ce8da5359a40/.vimrc))
-
-### 参加者リスト
-
-6名。
-
-- bgnori
-- kamichidu
-- lisia
-- manga_osyo
-- s_of_p
-- thinca
-
-### ログ
-<http://lingr.com/room/vim/archives/2014/01/04#message-17984681>
-
-### 関連リンク
-
+{% include archive.md %}
