--- a/archive/082.md
+++ b/archive/082.md
@@ -1,37 +1,7 @@
 ---
 layout: archive
 title: 第82回 vimrc読書会
+id: 82
 category: archive
 ---
-
-### 日時
-2014/01/25(土) 23:00-
-
-### vimrc
-[5t111111](https://github.com/5t111111) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/5t111111/dotfiles/blob/1c1d913daaf50361c818a6d530e8d93b8efdd819/.vimrc) ([ダウンロード](https://raw.github.com/5t111111/dotfiles/1c1d913daaf50361c818a6d530e8d93b8efdd819/.vimrc))
-
-### 参加者リスト
-
-14名。
-
-- AmaiSaeta
-- Jagua
-- crazymaster
-- deris0126
-- haya14busa
-- lisia
-- manga_osyo
-- mattn
-- rbtnn
-- thinca
-- ujihisa
-- wiredool
-- zeero
-- あるにくすー
-
-### ログ
-<http://lingr.com/room/vim/archives/2014/01/25#message-18179513>
-
-### 関連リンク
+{% include archive.md %}
