--- a/archive/009.md
+++ b/archive/009.md
@@ -1,41 +1,7 @@
 ---
 layout: archive
 title: 第9回 vimrc読書会
+id: 9
 category: archive
 ---
-
-### 日時
-2012/09/01(土) 23:00-
-
-### vimrc
-[ujihisa](https://github.com/ujihisa) さんの vimrc を読みました。
-
-- [_vimrc](https://github.com/ujihisa/config/blob/8c513ac93429e27ce27e6020a7d48e728b809169/_vimrc) ([ダウンロード](https://raw.github.com/ujihisa/config/8c513ac93429e27ce27e6020a7d48e728b809169/_vimrc))
-
-### 参加者リスト
-
-18名。
-
-- Jagua
-- LeafCage
-- Shaula
-- Shougo
-- anekos
-- daisuzu
-- deris0126
-- ebc_2in2crc
-- grauwoelfchen
-- manga_osyo
-- mattn
-- raa0121
-- rbtnn
-- thinca
-- ujihisa
-- umeyee
-- wiredool
-- yomi322
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/09/01#message-11718033>
-
+{% include archive.md %}
