--- a/archive/010.md
+++ b/archive/010.md
@@ -1,40 +1,7 @@
 ---
 layout: archive
 title: 第10回 vimrc読書会
+id: 10
 category: archive
 ---
-
-### 日時
-2012/09/09(日) 00:00-
-
-### vimrc
-[thinca](https://github.com/thinca) さんの vimrc を読みました。
-
-- [vimrc](https://gist.github.com/3666285) ([ダウンロード](https://raw.github.com/gist/3666285/84069c169c6c683ed89212ed048323c5c116bef1/vimrc))
-- [bundle.vim](https://gist.github.com/3675965) ([ダウンロード](https://raw.github.com/gist/3675965/5739da5abedef838ed49b8328d9b29e3dd78bed4/bundle.vim))
-
-### 参加者リスト
-
-16名。
-
-- AmaiSaeta
-- Jagua
-- LeafCage
-- Lindan
-- Shaula
-- Shougo
-- d6rkaiz
-- daisuzu
-- grauwoelfchen
-- manga_osyo
-- mattn
-- rbtnn
-- sgur
-- thinca
-- ujihisa
-- wiredool
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/09/08#message-11827882>
-
+{% include archive.md %}
