--- a/archive/013.md
+++ b/archive/013.md
@@ -1,41 +1,7 @@
 ---
 layout: archive
 title: 第13回 vimrc読書会
+id: 13
 category: archive
 ---
-
-### 日時
-2012/09/29(土) 23:00-
-
-### vimrc
-[sorah](https://github.com/sorah/) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/sorah/config/blob/c6d78ced9342b5ae72d2a5d86bfd609184a0fa8a/vim/dot.vimrc) ([ダウンロード](https://raw.github.com/sorah/config/c6d78ced9342b5ae72d2a5d86bfd609184a0fa8a/vim/dot.vimrc))
-
-### 参加者リスト
-
-17名。
-
-- bgnori
-- d6rkaiz
-- daisuzu
-- deris0126
-- grauwoelfchen
-- hecomi
-- manga_osyo
-- LeafCage
-- Lindan
-- raa0121
-- rbtnn
-- Shinya Saiho
-- Shota Fukumori
-- shim0mura
-- thinca
-- umeyee
-- wiredool
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/09/29#message-12207282>
-
-### 関連リンク
+{% include archive.md %}
