--- a/archive/023.md
+++ b/archive/023.md
@@ -1,33 +1,7 @@
 ---
 layout: archive
 title: 第23回 vimrc読書会
+id: 23
 category: archive
 ---
-
-### 日時
-2012/12/08(土) 23:00-
-
-### vimrc
-[daisuzu](https://github.com/daisuzu) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/daisuzu/dotvim/blob/4e50bc5ec2b4a77f78f97f3c0cada8b08dff1031/.vimrc) ([ダウンロード](https://raw.github.com/daisuzu/dotvim/4e50bc5ec2b4a77f78f97f3c0cada8b08dff1031/.vimrc))
-
-
-### 参加者リスト
-
-7名。
-
-- deris0126
-- Lindan
-- manga_osyo
-- daisuzu
-- rbtnn
-- wiredool
-- thinca
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/12/08#message-13176343>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/leafcage/20121218/1355804737>
+{% include archive.md %}
