--- a/archive/024.md
+++ b/archive/024.md
@@ -1,37 +1,7 @@
 ---
 layout: archive
 title: 第24回 vimrc読書会
+id: 24
 category: archive
 ---
-
-### 日時
-2012/12/15(土) 23:00-
-
-### vimrc
-[magicdrive](https://github.com/magicdrive) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/magicdrive/vimfiles/blob/1921a3d724d157d0dd6cdadd6ae358bf64eaf286/vimrc) ([ダウンロード](https://raw.github.com/magicdrive/vimfiles/1921a3d724d157d0dd6cdadd6ae358bf64eaf286/vimrc))
-
-### 参加者リスト
-
-13名。
-
-- Jagua
-- Lindan
-- wiredool
-- bool_fool
-- yomi322
-- TKinugasa
-- basyura
-- jakalada
-- magicdrive
-- ujihisa
-- manga_osyo
-- yuya_presto
-- thinca
-
-### ログ
-<http://lingr.com/room/vim/archives/2012/12/15#message-13266634>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/leafcage/20121218/1355804737>
+{% include archive.md %}
