--- a/archive/032.md
+++ b/archive/032.md
@@ -1,36 +1,7 @@
 ---
 layout: archive
 title: 第32回 vimrc読書会
+id: 32
 category: archive
 ---
-
-### 日時
-2013/02/09(土) 23:00-
-
-### vimrc
-[guyon](https://github.com/guyon) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/guyon/configs/blob/d595529409e33e7a3523a65f355eeee6e5741d0c/.vimrc) ([ダウンロード](https://raw.github.com/guyon/configs/d595529409e33e7a3523a65f355eeee6e5741d0c/.vimrc))
-
-### 参加者リスト
-
-11名。
-
-- AmaiSaeta
-- LeafCage
-- cohama
-- deris0126
-- guyon
-- jakalada
-- kanno_kanno
-- manga_osyo
-- raiden325
-- thinca
-- wiredool
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/02/09#message-13950501>
-
-### 関連リンク
-
+{% include archive.md %}
