--- a/archive/038.md
+++ b/archive/038.md
@@ -1,38 +1,7 @@
 ---
 layout: archive
 title: 第38回 vimrc読書会
+id: 38
 category: archive
 ---
-
-### 日時
-2013/03/23(土) 23:00-
-
-### vimrc
-[kannokanno](https://github.com/kannokanno) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/kannokanno/dotfiles/blob/c1818803788bb4af6dd3cd3aec1d4b3205c035cc/.vimrc) ([ダウンロード](https://raw.github.com/kannokanno/dotfiles/c1818803788bb4af6dd3cd3aec1d4b3205c035cc/.vimrc))
-
-### 参加者リスト
-
-12名。
-
-- AmaiSaeta
-- bouzuya
-- cohama
-- deris0126
-- itchyny
-- kanno_kanno
-- manga_osyo
-- mattn
-- rbtnn
-- thinca
-- wiredool
-- yuya_presto
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/03/23#message-14449036>
-
-### 関連リンク
-- <http://d.hatena.ne.jp/kanno_kanno/20130330/1364619154>
-
+{% include archive.md %}
