--- a/archive/039.md
+++ b/archive/039.md
@@ -1,35 +1,7 @@
 ---
 layout: archive
 title: 第39回 vimrc読書会
+id: 39
 category: archive
 ---
-
-### 日時
-2013/03/30(土) 23:00-
-
-### vimrc
-[mopp](https://github.com/mopp) さんの vimrc を読みました。
-
-- [vimrc](https://github.com/mopp/vimrc/blob/72de78ce87e71e68b8b880b783ca9673ea72712f/.vimrc) ([ダウンロード](https://raw.github.com/mopp/vimrc/72de78ce87e71e68b8b880b783ca9673ea72712f/.vimrc))
-
-### 参加者リスト
-
-11名。
-
-- Lindan
-- bgnori
-- cohama
-- crazymaster
-- deris0126
-- kanno_kanno
-- manga_osyo
-- mopp
-- raa0121
-- thinca
-- wiredool
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/03/30#message-14537427>
-
-### 関連リンク
-
+{% include archive.md %}
