--- a/archive/072.md
+++ b/archive/072.md
@@ -1,44 +1,7 @@
 ---
 layout: archive
 title: 第72回 vimrc読書会
+id: 72
 category: archive
 ---
-
-### 日時
-2013/11/16(土) 23:00-
-
-### vimrc
-[田中邦裕](http://tanaka.sakura.ad.jp/vimrc) さんの vimrc を読みました。
-
-- [vimrc](http://tanaka.sakura.ad.jp/vimrc)
-
-### 参加者リスト
-
-19名。
-
-- LeafCage
-- Lindan
-- \_nishigori
-- alpaca_taichou
-- bori_so1
-- cohama
-- deris0126
-- haya14busa
-- hecomi
-- hokorobi
-- kiwanami
-- manga_osyo
-- mattn
-- mopp
-- raa0121
-- rbtnn
-- supermomonga
-- thinca
-- ujihisa
-
-
-### ログ
-<http://lingr.com/room/vim/archives/2013/11/16/#message-17390661>
-
-### 関連リンク
-
+{% include archive.md %}
